--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block header %}
+            {% include 'layouts/header.html.twig' %}
+        {% endblock %}
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
